--- a/frontend/src/components/MarkdownEditor.css
+++ b/frontend/src/components/MarkdownEditor.css
@@ -1,4 +1,7 @@
-.editor {
-  height: 10em;
+textarea {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
+  height: 15em;
+
 }
